--- a/app/src/main/res/layout/activity_group_info.xml
+++ b/app/src/main/res/layout/activity_group_info.xml
@@ -23,9 +23,9 @@
             android:id="@+id/thumbnail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="15dp"
+            android:layout_marginEnd="15dp"
             android:background="@drawable/round_text"
             android:gravity="center"
             android:orientation="horizontal"
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_alignTop="@id/thumbnail"
             android:layout_centerVertical="true"
-            android:layout_toRightOf="@id/thumbnail"
+            android:layout_toEndOf="@id/thumbnail"
             android:text="Group Name"
             android:textColor="#ffffff"
             android:textSize="18sp"
