--- a/app/src/main/res/layout/create_group_icon_click_dialog.xml
+++ b/app/src/main/res/layout/create_group_icon_click_dialog.xml
@@ -20,15 +20,14 @@
             android:id="@+id/thumbnail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="15dp"
+            android:layout_marginEnd="15dp"
             android:background="@drawable/round_text"
             android:backgroundTint="#FFFFFF"
             android:gravity="center"
             android:orientation="horizontal"
             android:padding="3dip"
-            android:text="A"
             android:textColor="@android:color/white"
             android:textSize="16sp" />
 
