--- a/app/src/main/res/layout/list_item_main.xml
+++ b/app/src/main/res/layout/list_item_main.xml
@@ -22,8 +22,8 @@
 
             <ImageButton
                 android:id="@+id/delete_button"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:backgroundTint="#F83728"
                 app:srcCompat="@android:drawable/ic_menu_delete" />
 
@@ -40,7 +40,7 @@
         android:clickable="true"
         android:orientation="horizontal"
         android:id="@+id/container"
-        android:padding="13dp"
+        android:padding="10dp"
         android:focusable="true">
 
         <TextView
@@ -90,8 +90,9 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/name"
             android:layout_marginTop="2dp"
-            android:layout_toRightOf="@id/thumbnail"
+            android:layout_toEndOf="@id/thumbnail"
             android:text="Test Message Here"
+            android:maxLines="1"
             android:textColor="@color/main_screen_normal"
             android:textSize="16sp" />
 
@@ -100,11 +101,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignTop="@id/name"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="5dip"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="5dip"
             android:gravity="right"
             android:textColor="@color/main_screen_normal"
-            android:textSize="15dip"
+            android:textSize="14sp"
             android:textStyle="bold" />
 
         <TextView
@@ -112,7 +113,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="25dp"
             android:background="@drawable/msg_circle"
             android:gravity="center"
             android:text=""
