--- a/app/src/main/res/layout/send_file.xml
+++ b/app/src/main/res/layout/send_file.xml
@@ -42,6 +42,7 @@
                 <include
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:visibility="gone"
                     layout="@layout/message_sent_reply_layout"/>
 
                 <RelativeLayout
